unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/Bank_Monthly_Ledgers__c.object-meta.xml
<CustomObject>
    <label>Bank Monthly Ledger</label>
    <nameField>
        <displayFormat>BML-{0}</displayFormat>
        <label>Bank Monthly Ledgers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Monthly Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>