unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Avg_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Balance__c</fullName>
    <label>Avg Daily Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>