unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Bank_Data__c.field-meta.xml
<CustomField>
    <fullName>Bank_Data__c</fullName>
    <label>Bank Data</label>
    <referenceTo>Bank_Data__c</referenceTo>
    <relationshipLabel>Bank Monthly Ledgers</relationshipLabel>
    <relationshipName>Bank_Monthly_Ledgers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>