unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Day_13_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Day_13_Daily_Balance__c</fullName>
    <label>Day 13 Daily Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>