unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Day_17_Daily_Balance__c.field-meta.xml
<CustomField>
    <fullName>Day_17_Daily_Balance__c</fullName>
    <label>Day 17 Daily Balance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>