unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Deposits_Count__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Count__c</fullName>
    <label>Deposits (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>