unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>