unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Month_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Month_Name_Formula__c</fullName>
    <formula>Case( Calendar_Month_Number__c , 
1,'Jan', 
2,'Feb', 
3,'Mar', 
4,'Apr', 
5,'May', 
6,'Jun', 
7,'Jul', 
8,'Aug', 
9,'Sep', 
10,'Oct', 
11,'Nov', 
12,'Dec','???')</formula>
    <label>Month Name - Formula</label>
    <type>Text</type>
</CustomField>