unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Negative_Days__c.field-meta.xml
<CustomField>
    <fullName>Negative_Days__c</fullName>
    <label>Negative Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>