unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/NSF_s__c.field-meta.xml
<CustomField>
    <fullName>NSF_s__c</fullName>
    <label>NSF's</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>