unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Number_Of_Days_With_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Days_With_Transactions__c</fullName>
    <label>Number Of Days With Transactions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>