unpackaged/main/default/objects/Bank_Monthly_Ledgers__c/fields/Withdrawls__c.field-meta.xml
<CustomField>
    <fullName>Withdrawls__c</fullName>
    <label>Withdrawls ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>